# IoTLib

./: .gitignore  README.md
examples/esp8266_wip/: CppProperties.json  Makefile  iotlib_esp8266  sdkconfig.old
examples/esp8266_wip/main/: IotLib_Config.hpp  component.mk  main.cpp
examples/mock_wip/: CMakeLists.txt  iotlib_mock  main.c
examples/mock_wip/app/: IotLib_Config.hpp  main.cpp
examples/multiplatform_board/: CppProperties.json  iotlib
examples/multiplatform_board/app/: config.hpp  main.cpp
examples/rpi_wip/: CMakeLists.txt  CppProperties.json  configure.sh  iotlib_rpi
examples/rpi_wip/app/: IotLib_Config.hpp  main.cpp
iotlib/: Adc.hpp  BME280.cpp  BME280.hpp  Definitions.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  Gpio.cpp  Gpio.hpp  I2CBus.hpp  IoTLib.hpp  Library.hpp  OneWireBus.cpp  OneWireBus.hpp  SPIBus.hpp  System.hpp  UARTPort.hpp
iotlib/Devices/: BME280.cpp  BME280.hpp  DS18B20.cpp  DS18B20.hpp  HD44780.cpp  HD44780.hpp  MCP9700.cpp  MCP9700.hpp  PMS3003.cpp  PMS3003.hpp
iotlib/Drivers/: BME280.cpp  BME280.hpp  DS18B20.cpp  DS18B20.hpp  HD44780.cpp  HD44780.hpp  MCP9700.cpp  MCP9700.hpp  PMS3003.cpp  PMS3003.hpp
iotlib/Hardware/: Adc.hpp  Gpio.hpp  I2CBus.hpp  OneWireBus.hpp  SPIBus.hpp  UARTPort.hpp
iotlib/Platform/: Platform.cpp  Platform.hpp  PlatformDefinitions.hpp
iotlib/Platform/Esp8266/: Esp8266Definitions.hpp  Esp8266Gpio.inl  Esp8266PlatformImpl.inl  Gpio.esp8266.cpp  I2C.esp8266.cpp
iotlib/Platform/Mock/: Definitions.mock.hpp  MockDefinitions.hpp  MockGpio.inl  MockPlatformImpl.inl
iotlib/Platform/RPi/: RPiDefinitions.hpp  RPiGpio.inl  RPiPlatformImpl.inl
iotlib/include/iotlib/: Gpio.hpp
iotlib/include/iotlib/Platform/: PlatformGpio.hpp
iotlib/include/iotlib/platform/: gpio.hpp
iotlib/src/: Gpio.cpp
iotlib_esp8266/: platform.h
iotlib_esp8266/include/iotlib/: PlatformDefinitions.hpp
iotlib_esp8266/include/iotlib/Platform/: PlatformDefinitions.hpp
iotlib_esp8266/src/Platform/: Esp8266Gpio.cpp
iotlib_esp8266/src/platform/: gpio.cpp
iotlib_mock/: platform.h
iotlib_mock/include/iotlib/Platform/: PlatformDefinitions.hpp
iotlib_mock/src/Platform/: MockGpio.cpp
iotlib_mock/src/platform/: gpio.cpp
iotlib_rpi/: platform.h
iotlib_rpi/include/iotlib/Platform/: PlatformDefinitions.hpp
iotlib_rpi/src/Platform/: RpiGpio.cpp
